[gd_scene format=3 uid="uid://cbbn0wa3uhauv"]

[ext_resource type="Script" uid="uid://obquawutrjnb" path="res://Scenes/Main/main.gd" id="1_1r6ip"]
[ext_resource type="PackedScene" uid="uid://c5g5hfs2byfy6" path="res://Scenes/Upgrades Classes/Earn/upgrade_earn_class.tscn" id="2_lixft"]

[sub_resource type="LabelSettings" id="LabelSettings_amr5s"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_1r6ip"]
font_size = 25

[node name="Main" type="Node2D" unique_id=1359911912]
script = ExtResource("1_1r6ip")

[node name="Label_Money_Counter" type="Label" parent="." unique_id=2022677590]
offset_right = 277.0
offset_bottom = 69.0
text = "Money: 999"
label_settings = SubResource("LabelSettings_amr5s")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=763807614]
top_level = true
offset_left = 80.0
offset_top = 77.0
offset_right = 190.0
offset_bottom = 119.0

[node name="Label_Earn_Per_Second" type="Label" parent="CenterContainer" unique_id=574351433]
layout_mode = 2
text = "999/sec"
label_settings = SubResource("LabelSettings_1r6ip")

[node name="Timer_Beatwen_Earning" type="Timer" parent="." unique_id=1892679348]
autostart = true

[node name="Upgrades_Earn" type="VBoxContainer" parent="." unique_id=797345228]
offset_left = 13.0
offset_top = 127.0
offset_right = 340.0
offset_bottom = 572.0
theme_override_constants/separation = 15

[node name="Button_Upgrade_1" parent="Upgrades_Earn" unique_id=1702155469 instance=ExtResource("2_lixft")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade: 999"
alignment = 0
earn = 2
button_label = "Earn"
max_level = 50
cost = 10.0
cost_mult = 1.1
number = 1

[node name="Button_Upgrade_2" parent="Upgrades_Earn" unique_id=502105022 instance=ExtResource("2_lixft")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade: 999"
alignment = 0
earn = 10
button_label = "Earn"
max_level = 50
cost = 250.0
cost_mult = 1.2
number = 2

[node name="Button_Upgrade_3" parent="Upgrades_Earn" unique_id=1492891381 instance=ExtResource("2_lixft")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade: 999"
alignment = 0
earn = 50
button_label = "Earn"
max_level = 50
cost = 5000.0
cost_mult = 1.3
number = 3

[node name="Button_Upgrade_4" parent="Upgrades_Earn" unique_id=976049518 instance=ExtResource("2_lixft")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade: 999"
alignment = 0
earn = 150
button_label = "Earn"
max_level = 50
cost = 25000.0
cost_mult = 1.4
number = 4

[node name="Button_Upgrade_5" parent="Upgrades_Earn" unique_id=225392917 instance=ExtResource("2_lixft")]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Upgrade: 999"
alignment = 0
earn = 500
button_label = "Earn"
max_level = 50
cost = 100000.0
cost_mult = 1.5
number = 5

[node name="Upgrade_Crit" type="VBoxContainer" parent="." unique_id=1686305966]
offset_right = 40.0
offset_bottom = 40.0
